# kazari

./: Cargo.nix  Cargo.toml  README.md  clippy.toml
.github/workflows/: auto-release.yml
examples/: demo.rs
src/: blocks.rs  caps.rs  ir.rs  lib.rs  lisp.rs  render.rs  style.rs  theme.rs
tests/: matrix.rs
